Created APIService Added HILT di, Retrofit Redisign MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ExchangeMonitoring</string>
+    <string name="retrofit_gson_date_format">yyyy-MM-dd\'T\'HH:mm:ss</string>
+    <string name="retrofit_url">https://www.cbr-xml-daily.ru/</string>
 </resources>
